--- a/GWsite.css
+++ b/GWsite.css
@@ -2,21 +2,32 @@ body {background-color:#FFCC00;
       font-family: 'Montserrat', sans-serif;}
 
 
+.logo {width:160px;
+      height:160px;
+      margin-top:10px;
+      margin-left:10px;
+      background-color: #FFCC00;}
 
 .header {
   position:relative;
   width:auto;
-  height:150px;
+  border-style:solid;
+  border-top-color: #000000;
+  border-bottom-color: #FFCC00;
+  height:180px;
   background-color:#000000;
   margin:-10px;
+  margin-bottom: -2px;
 }
 
 .NavBar {
   width:auto;
-  height:50px;
-  font-size: 30px;
-  line-height: 30px;
-  Margin-bottom: -0.5px;
+  height:35px;
+  font-size: 35px;
+  line-height: 35px;
+  Margin-bottom: 18px;
+  margin-left:180px;
+  border-bottom-color: #FFCC00;
   position:absolute; bottom:0;
 }
 
@@ -62,7 +73,7 @@ ul
                height:2000px;
                position:absolute;
                right:-40px;
-               top:140px;
+               top:175px;
                margin-top:20px;
                margin-left:-100px;
                margin-right:50px;
